WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101125
REGRESSION (
r132014
-
r132047
): Webkit Inspector Window docking broken
https://bugs.webkit.org/show_bug.cgi?id=101125
Summary
REGRESSION (r132014-r132047): Webkit Inspector Window docking broken
Kevin M. Dean
Reported
2012-11-02 16:30:18 PDT
Created
attachment 172171
[details]
Incorrect When the inspector is initially opened, it has big icons like it thinks it's in a separate window, but the toggle button tooltip says "dock to main window". When it initially breaks with
r132047
, clicking the dock button does not toggle anything, but in recent nightlies it switches to the correct small icon's docked to the main window and then toggle window works as expected from then on until you close and re-open the inspector. Then it's the same problem again. See attachments.
Attachments
Incorrect
(105.00 KB, image/png)
2012-11-02 16:30 PDT
,
Kevin M. Dean
no flags
Details
correct
(58.16 KB, image/png)
2012-11-02 16:30 PDT
,
Kevin M. Dean
no flags
Details
Patch
(2.92 KB, patch)
2012-11-03 03:12 PDT
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kevin M. Dean
Comment 1
2012-11-02 16:30:31 PDT
Created
attachment 172172
[details]
correct
Pavel Feldman
Comment 2
2012-11-03 03:12:53 PDT
Created
attachment 172215
[details]
Patch
WebKit Review Bot
Comment 3
2012-11-03 04:36:27 PDT
Comment on
attachment 172215
[details]
Patch Clearing flags on attachment: 172215 Committed
r133393
: <
http://trac.webkit.org/changeset/133393
>
WebKit Review Bot
Comment 4
2012-11-03 04:36:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug