REGRESSION (r132014-r132047): Webkit Inspector Window docking broken https://bugs.webkit.org/show_bug.cgi?id=101125

Reviewed by Vsevolod Vlasov.

Source/WebCore:

Added "bottom" as default docked state.

* inspector/front-end/DockController.js:
(WebInspector.DockController):

Source/WebKit2:

Migrated from ?docked= to ?dockSide= format.

* UIProcess/WebInspectorProxy.cpp:
(WebKit::WebInspectorProxy::createInspectorPage):


Canonical link: https://commits.webkit.org/119231@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133393 268f45cc-cd09-0410-ab3c-d52691b4dbfc